--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,11 @@
     android:background="@drawable/bg1">
 
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Earth"
+        android:layout_gravity="center_horizontal" />
 
     <TextView
         android:layout_height="wrap_content"
