background font test

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,11 @@
         android:layout_gravity="center_horizontal" />
 
     <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Welcome to Consumers World"
+        android:textColor="#FFFFFF"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="wrap_content"
         android:layout_margin="20dp"/>
 
 
