--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,11 @@
         android:layout_margin="20dp"/>
 
     <Spinner
-        android:id = "@+id/page1Spinner"
-        android:layout_width = "match_parent"
+        android:id = "@+id/spinner"
+        android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
-        android:spinnerMode = "dropdown"
-        />
+        android:textColor="#FFFFFF"
+        android:spinnerMode="dropdown" />
 
 </LinearLayout>
  
