--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,14 +14,20 @@
         android:text="Welcome to Consumers World"
         android:textColor="#FFFFFF"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_margin="20dp"/>
+        android:id="@+id/textView"
+        android:layout_above="@+id/spinner"
+        android:layout_centerHorizontal="true" />
 
     <Spinner
         android:id = "@+id/spinner"
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
         android:textColor="#FFFFFF"
-        android:spinnerMode="dropdown" />
+        android:spinnerMode="dropdown"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="187dp" />
 
 </RelativeLayout>
  
