--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,5 +29,12 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="187dp" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/Button"
+        android:layout_below="@+id/spinner"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
  
