--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:background="@drawable/earthside"
     tools:context=".MainActivity">
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,23 +19,32 @@
         android:layout_above="@+id/spinner"
         android:layout_centerHorizontal="true" />
 
-    <Spinner
-        android:id = "@+id/spinner"
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:textColor="#FFFFFF"
-        android:spinnerMode="dropdown"
+
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    <Button
+        android:layout_width="550px"
+        android:layout_height="550px"
+        android:text=""
+        android:id="@+id/button"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="187dp" />
+        android:layout_marginTop="132dp"
+        android:background="@drawable/cart"/>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/Button"
-        android:layout_below="@+id/spinner"
-        android:layout_centerHorizontal="true" />
+        android:layout_width="550px"
+        android:layout_height="550px"
+        android:text=""
+        android:id="@+id/button2"
+        android:layout_alignBottom="@+id/button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/cart" />
+    </RelativeLayout>
 
 </RelativeLayout>
  
