--- a/app/src/main/res/layout/content_page2.xml
+++ b/app/src/main/res/layout/content_page2.xml
@@ -20,5 +20,14 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="187dp" />
 
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner2"
+        android:spinnerMode="dropdown"
+        android:layout_alignTop="@+id/spinner"
+        android:layout_toRightOf="@+id/spinner"
+        android:layout_toEndOf="@+id/spinner" />
+
 
 </RelativeLayout>
