added more to the second page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_width="550px"
         android:layout_height="550px"
         android:text=""
-        android:id="@+id/button"
+        android:id="@+id/button2"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -39,8 +39,8 @@
         android:layout_width="550px"
         android:layout_height="550px"
         android:text=""
-        android:id="@+id/button2"
-        android:layout_alignBottom="@+id/button"
+        android:id="@+id/button"
+        android:layout_alignBottom="@+id/button2"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:background="@drawable/cart" />
