--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,18 @@
         android:layout_alignBottom="@+id/button2"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:paddingBottom="10dp"
         android:background="@drawable/converter2" />
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="300dp"
+            android:id="@+id/imageView"
+            android:layout_above="@+id/button2"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/welcom"
+            android:paddingTop="200dp"
+            android:layout_alignParentTop="true"/>
     </RelativeLayout>
 
 </RelativeLayout>
