--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,8 @@
             android:id="@+id/imageView"
             android:background="@drawable/welcom"
             android:paddingTop="200dp"
+            android:paddingLeft="200dp"
+            android:layout_alignParentTop="true"
             android:layout_above="@+id/button"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
