--- a/app/src/main/res/layout/content_page2.xml
+++ b/app/src/main/res/layout/content_page2.xml
@@ -36,7 +36,7 @@
         android:text="From Currency:"
         android:textColor="#FFFFFF"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/textView"
+        android:id="@+id/fromCurrTextView"
         android:layout_above="@+id/fromCurrSpinner"
         android:layout_alignRight="@id/fromCurrSpinner"
         android:paddingRight="50dp"
@@ -48,7 +48,7 @@
         android:text="To Currency:"
         android:textColor="#FFFFFF"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/textView2"
+        android:id="@+id/ToCurrTextView"
         android:layout_above="@+id/fromCurrSpinner"
         android:layout_alignRight="@id/toCurrSpinner"
         android:paddingRight="0px"
@@ -57,7 +57,7 @@
     <EditText
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
+        android:id="@+id/FromCurrTextInput"
         android:hint="From Currency"
         android:textColorHint="#787878"
         android:inputType="numberDecimal"
@@ -72,7 +72,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:paddingLeft="10dp"
         android:paddingTop="8dp"
-        android:id="@+id/textView3"
+        android:id="@+id/convertedCurrAutoUpdateText"
         android:layout_below="@+id/toCurrSpinner"
         android:layout_toRightOf="@+id/fromCurrSpinner"
         android:layout_toEndOf="@+id/fromCurrSpinner" />
@@ -96,9 +96,9 @@
         android:paddingLeft="10dp"
         android:textColorHint="#D8D8D8"
         android:id="@+id/textView5"
-        android:layout_below="@+id/editText"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignStart="@+id/textView3" />
+        android:layout_below="@+id/FromCurrTextInput"
+        android:layout_alignLeft="@+id/convertedCurrAutoUpdateText"
+        android:layout_alignStart="@+id/convertedCurrAutoUpdateText" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -109,7 +109,7 @@
         android:paddingTop="5dp"
         android:textColorHint="#D8D8D8"
         android:id="@+id/textView6"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/convertedCurrAutoUpdateText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
