added Fetch.java class and Calculator.java with empty methods for now

--- a/app/src/main/res/layout/content_page2.xml
+++ b/app/src/main/res/layout/content_page2.xml
@@ -92,7 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:hint="Good and Price"
+        android:hint=""
         android:paddingLeft="10dp"
         android:textColorHint="#D8D8D8"
         android:id="@+id/toGoodRefPrice"
@@ -104,7 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:hint="Good and Price"
+        android:hint=""
         android:layout_alignBottom="@id/toGoodRefPrice"
         android:paddingTop="5dp"
         android:textColorHint="#D8D8D8"
