--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,9 @@
         android:layout_height="400px"
         android:text=""
         android:id="@+id/button2"
-        android:background="@drawable/cart2"
+        android:background="@drawable/cart3"
         android:paddingBottom="150px"
+        android:layout_marginBottom="41dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -39,11 +40,11 @@
         android:layout_height="550px"
         android:text=""
         android:id="@+id/button"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:paddingBottom="10dp"
-        android:background="@drawable/converter2" />
+        android:background="@drawable/converter2"
+        android:layout_alignTop="@+id/button2"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
 
