Added convert button. It doesnt do anything yet.

--- a/app/src/main/res/layout/content_page2.xml
+++ b/app/src/main/res/layout/content_page2.xml
@@ -113,5 +113,14 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Convert"
+        android:id="@+id/button3"
+        android:layout_below="@+id/FromCurrTextInput"
+        android:layout_toRightOf="@+id/fromGoodRefPrice"
+        android:layout_toEndOf="@+id/fromGoodRefPrice" />
+
 
 </RelativeLayout>
