--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,7 @@
             android:text="Welcome"
             android:id="@+id/textView7"
             android:textColor="#FFFFFF"
+            android:fontFamily="Times New Roman"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
